--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,9 +5,9 @@
 
 // External libraries
 // @import "bootstrap-sprockets";
-// @import "bootstrap";
+@import "bootstrap";
 // @import "font-awesome-sprockets";
-// @import "font-awesome";
+@import "font-awesome";
 
 // Your CSS partials
 // @import "layouts/index";
