--- a/app/views/links/index.html.haml
+++ b/app/views/links/index.html.haml
@@ -18,7 +18,7 @@
             %td= link.clicks.count
             %td
               =link_to 'Show', link
-              - if user_signed_in? && @link.user == current_user
+              - if user_signed_in? && link.user == current_user
                 |
                 =link_to 'Edit', edit_link_path(link)
                 |
